give page a title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Toasties R Us</title>
     <link rel="stylesheet" type="text/css" href="index.css"/>
     
 </head>
@@ -13,8 +13,10 @@
     <h1> Large header </h1>
     <h2> Smaller header </h2>
     <p> Paragraph </p>
-    <img src="web/image.com" height="200px">
+    <img src="https://img.freepik.com/premium-vector/cute-happy-funny-toast-cartoon-character-illustration-icon-design-isolated_92289-1130.jpg?w=2000" height="200px">
     <a href="menu.html"> Menu </a>
+    <a href="contactus.html"> Contact Us</a>
+    <a href="directions.html"> How To Find Us </a>
     
 </body>
 </html>
