--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p> Paragraph </p>
     <img src="https://img.freepik.com/premium-vector/cute-happy-funny-toast-cartoon-character-illustration-icon-design-isolated_92289-1130.jpg?w=2000" height="200px">
     <a href="menu.html"> Menu </a>
-    <a href="contactus.html"> Contact Us</a>
+    <a href="ContactUs.html"> Contact Us</a>
     <a href="directions.html"> How To Find Us </a>
     
 </body>
