--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 
-    <h1> Large header </h1>
-    <h2> Smaller header </h2>
+    <h1> Toasties R Us </h1>
+    <h2> For our menu please click on the menu link. </h2>
     <p> Paragraph </p>
     <img src="https://img.freepik.com/premium-vector/cute-happy-funny-toast-cartoon-character-illustration-icon-design-isolated_92289-1130.jpg?w=2000" height="200px">
     <a href="Menu.html"> Menu </a>
