--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 </head>
 <body>
 
-    <h1> Toasties R Us </h1>
-    <h2> For our menu please click on the menu link. </h2>
-    <p> Paragraph </p>
+    <h1> Toasties 'r' us </h1>
+    <h2> Please freel feel to stick around and explore! </h2>
+    <p> Welcome to our webpage full of delicious treats and of course toasties! </p>
     <img src="https://img.freepik.com/premium-vector/cute-happy-funny-toast-cartoon-character-illustration-icon-design-isolated_92289-1130.jpg?w=2000" height="200px">
+    <br>
+    <br>
     <a href="Menu.html"> Menu </a>
     <a href="ContactUs.html"> Contact Us</a>
     <a href="directions.html"> How To Find Us </a>
