--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <h1> Toasties 'r' us </h1>
-    <h2> Please freel feel to stick around and explore! </h2>
+    <h2> Please feel free to stick around and explore! </h2>
     <p> Welcome to our webpage full of delicious treats and of course toasties! </p>
     <img src="https://img.freepik.com/premium-vector/cute-happy-funny-toast-cartoon-character-illustration-icon-design-isolated_92289-1130.jpg?w=2000" height="200px">
     <br>
