--- a/directions.html
+++ b/directions.html
@@ -10,6 +10,8 @@
 </head>
 <body>
 
+     <img src="https://img.freepik.com/premium-vector/map-icon-isometric-with-destination-location-pin-pointer-illustration-flat_180264-150.jpg?w=2000" height="400px">
+    
 <address>
 Visit us at:<br>
 toasties R US<br>
