--- a/Menu.html
+++ b/Menu.html
@@ -7,5 +7,6 @@ green jaffle<br>
 italian style toastie<br>
 roasted vegetable panini<br>
 chargrilled vegtable and silverside toasted sandwhiches<br>
+  <a href="index.html"> Home </a>
 <body>
 <html>
