--- a/ContactUs.html
+++ b/ContactUs.html
@@ -10,7 +10,7 @@
 
     <h2>
         Name:Celio Pereira <br />
-        Email:cheesecompany@random.org<br />
+        Email:toastiesrus@random.org<br />
         Address:122 Alumina Alley, UK<br />
         Message:07575484669<br />
         Thank you for choosing us<br />
