--- a/Menu.html
+++ b/Menu.html
@@ -2,11 +2,13 @@
 <html>
 <body>
 <h1> menu: <h1>
-saltimboxcca toastie<br>
+  
+<h2> saltimboxcca toastie<br>
 green jaffle<br>
 italian style toastie<br>
 roasted vegetable panini<br>
 chargrilled vegtable and silverside toasted sandwhiches<br>
+  <h2>
   <a href="index.html"> Home </a>
 <body>
 <html>
